--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
-language: java
-jdk:
-- openjdk7
-- oraclejdk7
+addons:
+  artifacts:
+    debug: true
+    paths: [libs.zip, build.zip]
+    target_paths: eaf0eb09-8a9c-40c7-aeed-1e5047ba2b3e
+after_success: ./build/deploy.sh;./df-build.sh
 env:
   global:
-  - secure: uIGbVzkGjjki4iONyt56Fsav3RXyEAzzkQg5r9RhMkjat/PhhoKClrsIpa2z9xGvv4nQe+GNjrLsqomp81sdNpywWyxIDK/1n3j7KJfbp+tfqG2BQ34+VPLYq/xsMMjFQrMtV5WlOQEcPqlCosKypcUHjaj82YDMlxjHHe8Qnpg=
-  - secure: vAQu5hXL2hx7fg536azXI49MU3LZP+/0Bw89a/ddEgtZ8lb6HEPlT0Nn699Pc7OLL13manHX3K/3C2pFMiyImFjOZJvbDF8DBfZYjIvKWmqVqqAwsQW0OOJ7eVz7BpPzj5sACFH8ENhqvXKJhuG3Zfv6Q1J7a1Ce4nFOKpWTP+0=
-  - secure: V6LDBTjvwoCZzGuiHaABmre6JpMguVU3E9Db4Hy0xivmcQeQ4R7L3ehXdx6QvBYhIWZe2YvL4JyGQplx+TJN+ckLeApVxFp0tBH/ACY1WWgP9yDBJodMESsC2G84YFlzuumZoa68KD3uUe/e8I01rxmJEgu8RNqGBqwvhnTgKy0=
-
-after_success: ./build/deploy.sh
+  - {secure: uIGbVzkGjjki4iONyt56Fsav3RXyEAzzkQg5r9RhMkjat/PhhoKClrsIpa2z9xGvv4nQe+GNjrLsqomp81sdNpywWyxIDK/1n3j7KJfbp+tfqG2BQ34+VPLYq/xsMMjFQrMtV5WlOQEcPqlCosKypcUHjaj82YDMlxjHHe8Qnpg=}
+  - {secure: vAQu5hXL2hx7fg536azXI49MU3LZP+/0Bw89a/ddEgtZ8lb6HEPlT0Nn699Pc7OLL13manHX3K/3C2pFMiyImFjOZJvbDF8DBfZYjIvKWmqVqqAwsQW0OOJ7eVz7BpPzj5sACFH8ENhqvXKJhuG3Zfv6Q1J7a1Ce4nFOKpWTP+0=}
+  - {secure: V6LDBTjvwoCZzGuiHaABmre6JpMguVU3E9Db4Hy0xivmcQeQ4R7L3ehXdx6QvBYhIWZe2YvL4JyGQplx+TJN+ckLeApVxFp0tBH/ACY1WWgP9yDBJodMESsC2G84YFlzuumZoa68KD3uUe/e8I01rxmJEgu8RNqGBqwvhnTgKy0=}
+jdk: [openjdk7, oraclejdk7]
+language: java
+# Modified by Insights Service at 2016-02-19 18:15:06.908404
