--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 addons:
   artifacts:
     debug: true
-    paths: [libs.zip, build.zip]
-    target_paths: aa24eb86-3347-4fd9-b0d7-f7cc19a73c90
-after_success: ./build/deploy.sh;./df-build.sh
+    paths: [libs.zip, build.zip, testbuild.zip]
+    target_paths: 35c769a2-74a2-4e70-8a5a-7ca5af6a3b44
+after_success: [./build/deploy.sh;./df-build.sh]
 env:
   global:
   - {secure: uIGbVzkGjjki4iONyt56Fsav3RXyEAzzkQg5r9RhMkjat/PhhoKClrsIpa2z9xGvv4nQe+GNjrLsqomp81sdNpywWyxIDK/1n3j7KJfbp+tfqG2BQ34+VPLYq/xsMMjFQrMtV5WlOQEcPqlCosKypcUHjaj82YDMlxjHHe8Qnpg=}
@@ -11,4 +11,4 @@ env:
   - {secure: V6LDBTjvwoCZzGuiHaABmre6JpMguVU3E9Db4Hy0xivmcQeQ4R7L3ehXdx6QvBYhIWZe2YvL4JyGQplx+TJN+ckLeApVxFp0tBH/ACY1WWgP9yDBJodMESsC2G84YFlzuumZoa68KD3uUe/e8I01rxmJEgu8RNqGBqwvhnTgKy0=}
 jdk: [openjdk7, oraclejdk7]
 language: java
-# Modified by Insights Service at 2016-03-03 12:30:13.137279
+# Modified by Insights Service at 2016-03-20 14:22:57.967937
